force-app/main/default/objects/Medical_Event__c/Medical_Event__c.object-meta.xml
<CustomObject>
    <label>Medical Event</label>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Medical Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>