force-app/main/default/objects/Medical_Event__c/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <label>Appointment Time</label>
    <type>DateTime</type>
</CustomField>