force-app/main/default/objects/Medical_Event__c/fields/Latest_Permissible_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Permissible_Date__c</fullName>
    <label>Latest Permissible Date</label>
    <type>Date</type>
</CustomField>