force-app/main/default/objects/Medical_Event__c/fields/Milestone_Completed__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone Completed?</label>
    <type>Checkbox</type>
</CustomField>