force-app/main/default/objects/Medical_Event__c/fields/ParentName__c.field-meta.xml
<CustomField>
    <fullName>ParentName__c</fullName>
    <formula>Patient__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentName</label>
    <type>Text</type>
</CustomField>