force-app/main/default/objects/Medical_Event__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medical Events</relationshipLabel>
    <relationshipName>Medical_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>