force-app/main/default/objects/Medical_Event__c/fields/Period_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Period_In_Days__c</fullName>
    <label>Period In Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>