force-app/main/default/objects/Medical_Event__c/fields/Procedure_Category__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Category__c</fullName>
    <label>Procedure Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>