force-app/main/default/objects/Medical_Event__c/fields/Procedure_Type__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Type__c</fullName>
    <label>Procedure Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>