force-app/main/default/objects/Medical_Event__c/fields/Recommended_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Start_Date__c</fullName>
    <label>Recommended Start Date</label>
    <type>Date</type>
</CustomField>