force-app/main/default/objects/Medical_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Appointment_Time__c</columns>
    <columns>Milestone_Completed__c</columns>
    <columns>Procedure_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Procedure_Type__c</columns>
    <columns>Period_In_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>